--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-12 d-flex flex-row align-items-center justify-content-between">
                 <div class="heading-brand">QR Terminal</div>
-                <a href="https://" class="btn btn-dark" target="_blank">Download Android App</a>
+                <a href="https://play.google.com/store/apps/details?id=com.asymmetric.qr_terminal&hl=tr&gl=US" class="btn btn-dark" target="_blank">Download Android App</a>
             </div>
         </div>
         <div class="row mt-6">
